# fourier-fit

./: Cargo.toml  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  setup_env.sh
.github/actions/rust-build/: action.yml
.github/workflows/: build-test.yml  release.yml
src/: background.rs  bode.rs  candles.rs  filters.rs  frequency.rs  lib.rs  logic.rs  main.rs  math.rs
src/structures/: candle.rs  data_modal.rs  filters.rs  mod.rs
src/views/: background.rs  bode.rs  candles.rs  frequency.rs  mod.rs  pz.rs  time.rs
