[package]
name = "fourier-fit"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
directories = "6.0.0"
iced = { version = "0.14.0", default-features = true, features = ["canvas"] }
iced_aw = "0.13.0"
ndarray = "0.17.1"
num-complex = "0.4.6"
rustfft = "6.4.1"
sci-rs = "0.4.1"
scirs2 = "0.1.0-rc.2"
scirs2-signal = "0.1.0-rc.2"
serde_json = "1.0.148"

# macOS: relies on Accelerate
[target.'cfg(target_os = "macos")'.dependencies]
ndarray-linalg = { version = "0.18.0", default-features = false }

# Linux: static OpenBLAS
[target.'cfg(target_os = "linux")'.dependencies]
ndarray-linalg = { version = "0.18.0", default-features = false, features = [
    "openblas-static",
] }

# Windows: static OpenBLAS
[target.'cfg(target_os = "windows")'.dependencies]
ndarray-linalg = { version = "0.18.0", default-features = false, features = [
    "openblas-static",
] }
